# pyglass

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NC_distributed.cpp  README.md  build.sh  io_util.h  main.cpp  requirements.txt  sq4_rerank.cpp  to_brute_force.cpp
.github/workflows/: ci.yml  release.yml
examples/: config.json  config.yaml  datasets.py  demo.ipynb  main.cc  main.py
glass/: builder.hpp  common.hpp  graph.hpp  graph_statistic.hpp  memory.hpp  neighbor.hpp  searcher.hpp  thread_pool.hpp  types.hpp  utils.hpp
glass/algorithms/: clustering.hpp
glass/hnsw/: HNSWInitializer.hpp  hnsw.hpp
glass/hnswlib/: hnswalg.h  hnswlib.h
glass/nsg/: nhood.hpp  nndescent.hpp  nsg.hpp  rnndescent.hpp
glass/quant/: bf16_quant.hpp  calibrator.hpp  computer.hpp  e5m2_quant.hpp  fp16_quant.hpp  fp32_quant.hpp  product_quant.hpp  quant.hpp  quant_base.hpp  sq1_quant.hpp  sq2u_quant.hpp  sq4_quant.hpp  sq4u_quant.hpp  sq4ua_quant.hpp  sq6_quant.hpp  sq8_quant.hpp  sq8p_quant.hpp  sq8u_quant.hpp  to_quant.hpp  utils.hpp
glass/searcher/: graph_searcher.hpp  ivf_searcher.hpp  refiner.hpp  searcher_base.hpp
glass/simd/: avx2.hpp  avx2_utils.hpp  avx512.hpp  avx512_utils.hpp  common.hpp  distance.hpp  neon.hpp  prefetch.hpp  scalar.hpp
glass/storage/: tensor.hpp
python/: README.md  bindings.cc  build_extension.py  pyproject.toml  setup.py
python/ann_dataset/: __init__.py  dataset.py
python/libs/: glass-1.0.0-cp310-cp310-linux_x86_64.whl
python/tests/: test_import.py
